adjusted layout of instructions page to fix spacing issues

--- a/views/partials/home-main.ejs
+++ b/views/partials/home-main.ejs
@@ -1,64 +1,66 @@
 <link rel="stylesheet" href="/stylesheets/home-main.css">
 <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
 <p></p>
-<div id="appSec1" class="main-font">
-    <div id="left-sec1">
-        <img src="/images/title-img.jpg" class="img-fluid rounded-circle">
-    </div>
-    <div id="right-sec1">
-        <img src="/images/logo-text.png" width="95%">
-    </div>
-</div>
-
-<div id="appSec3">
-    <div id="left-sec3" class="px-3">
-        <p class="text-center main-font">Team up with other Heros to do battle with powerful creatures, enchanted beats, evil scoundrels, and ancient beings.</p>
-    </div>
-    <div id="right-sec3">
-        <img src="/images/dragon-battle.jpg" height="65%" class="img-fluid rounded-pill">
-    </div>
-</div>
-
-<div id="appSec2" class="main-font">
-    <div id="left-sec2">
-        <div id="left-sec2-top">
-            <p class="text-center">Explore a vast world on your quest to recover the Aeon Crystal, a powerful artifact which was guarded by the Hero's of Swiftfell for generations.</p>
+<div id="group-all">
+    <div id="appSec1" class="main-font">
+        <div id="left-sec1">
+            <img src="/images/title-img.jpg" class="img-fluid rounded-circle">
         </div>
-        <div id="left-sec2-bottom">
-            <div class="col" align="center">
-                <div class="card" style="width: 15rem;">
-                    <img src="/images/forest1.jpg" class="card-img-top" alt="...">
-                    <div class="card-body" height="85%">
-                        <p class="card-text text-center">Brave your way through deep, lush forests. Legends tell of mytical creates inhabiting these parts</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col" align="center">
-                <div class="card" style="width: 15rem;">
-                    <img src="/images/mountians.jpg" height="42%" class="card-img-top" alt="...">
-                    <div class="card-body" height="85%">
-                        <p class="card-text">Test your courage as you scale towering mountains... watch your step!</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col" align="center">
-                <div class="card" style="width: 15rem;">
-                    <img src="/images/desert1.jpg" height="42%" class="card-img-top" alt="...">
-                    <div class="card-body" height="85%">
-                        <p class="card-text">Explore vast deserts. Move quickly, lest you become a victim to the sands.</p>
-                    </div>
-                </div>
-            </div>
-
+        <div id="right-sec1">
+            <img src="/images/logo-text.png" width="95%">
         </div>
     </div>
-</div>
 
-<div id="appSec4" class="main-font">
-    <img src="/images/hero-sec4.jpg" width="50%" class="rounded-pill">
-    <br>
-    <p class="text-center">Sign up for a FREE account today and start your own adventure in Tales from Swiftfell</p>
-    <a id="sign-up-button" href="/user/signup" class="btn btn-primary">Sign Up</a>
+    <div id="appSec3">
+        <div id="left-sec3" class="px-3">
+            <p class="text-center main-font">Team up with other Heros to do battle with powerful creatures, enchanted beats, evil scoundrels, and ancient beings.</p>
+        </div>
+        <div id="right-sec3">
+            <img src="/images/dragon-battle.jpg" height="65%" class="img-fluid rounded-pill">
+        </div>
+    </div>
+
+    <div id="appSec2" class="main-font">
+        <div id="left-sec2">
+            <div id="left-sec2-top">
+                <p class="text-center">Explore a vast world on your quest to recover the Aeon Crystal, a powerful artifact which was guarded by the Hero's of Swiftfell for generations.</p>
+            </div>
+            <div id="left-sec2-bottom">
+                <div class="col" align="center">
+                    <div class="card" style="width: 15rem;">
+                        <img src="/images/forest1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body" height="85%">
+                            <p class="card-text text-center">Brave your way through deep, lush forests. Legends tell of mytical creates inhabiting these parts</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col" align="center">
+                    <div class="card" style="width: 15rem;">
+                        <img src="/images/mountians.jpg" height="42%" class="card-img-top" alt="...">
+                        <div class="card-body" height="85%">
+                            <p class="card-text">Test your courage as you scale towering mountains... watch your step!</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col" align="center">
+                    <div class="card" style="width: 15rem;">
+                        <img src="/images/desert1.jpg" height="42%" class="card-img-top" alt="...">
+                        <div class="card-body" height="85%">
+                            <p class="card-text">Explore vast deserts. Move quickly, lest you become a victim to the sands.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div id="appSec4" class="main-font">
+        <img src="/images/hero-sec4.jpg" width="50%" class="rounded-pill">
+        <br>
+        <p class="text-center">Sign up for a FREE account today and start your own adventure in Tales from Swiftfell</p>
+        <a id="sign-up-button" href="/user/signup" class="btn btn-primary">Sign Up</a>
+    </div>
 </div>
