burned down media query on home (non-logged in) page to refactor... wish me luck ;)

--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -13,17 +13,20 @@
             <img src="/images/title-img.jpg" class="img-fluid rounded-circle">
         </div>
         <div id="right-sec1">
-            <img src="/images/logo-text.png" width="95%">
+            <img src="/images/logo-text.png">
         </div>
     </div>
 
     <div id="appSec3">
-        <div id="left-sec3" class="px-3">
-            <p class="text-center main-font">Team up with other Heros to do battle with powerful creatures, enchanted
-                beats, evil scoundrels, and ancient beings.</p>
+        <div id="left-sec3">
+            <p class="main-font text-center pt-5 pb-5">Team up with other Heros to do battle with powerful creatures, enchanted beats, evil scoundrels, and ancient beings.</p>
+            
+            <p class="main-font text-center pt-5 pb-5">Discover the lore of Swiftfell Village and the fabled Hero's Academy that lies within.</p>
+            
+            <p class="main-font text-center pt-5 pb-5">Rise up and fulfil your destiny as a protect of the ancient Aeon Crystal, whose mystic energy protects mankind from the forces of darkness.</p>
         </div>
         <div id="right-sec3">
-            <img src="/images/dragon-battle.jpg" height="65%" class="img-fluid rounded-pill">
+            <!-- Intentionally blank -->
         </div>
     </div>
 
@@ -69,7 +72,7 @@
     </div>
 
     <div id="appSec4" class="main-font">
-        <img src="/images/hero-sec4.jpg" width="50%" class="rounded-pill">
+        <img src="/images/hero-sec4.jpg" class="rounded-pill">
         <br>
         <p class="text-center">Sign up for a FREE account today and start your own adventure in Tales from Swiftfell</p>
         <a id="sign-up-button" href="/user/signup" class="btn btn-primary">Sign Up</a>
