--- a/public/stylesheets/home-main.css
+++ b/public/stylesheets/home-main.css
@@ -30,6 +30,7 @@ body {
     flex-direction: column;
     grid-area: 1 / 2 / span 1 / span 1;
     justify-content: center;
+    padding: 0 3vw 0 3vw;
 }
 
 #appSec2 {
@@ -64,23 +65,28 @@ body {
 #appSec3 {
     display: grid;
     height: 100vh;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     grid-template-rows: 100%;
     background-image: linear-gradient(to bottom, #F7EBC3, #C6CDDE);
 }
 
 #left-sec3 {
     display: flex;
+    flex-direction: column;
     grid-area: 1 / 1 / span 1 / span 1;
     justify-content: center;
     align-items: center;
+    font-size: 2em;
+    padding: 0 5vw 0 5vw;
 }
 
 #right-sec3 {
-    display: flex;
-    grid-area: 1 / 2 / span 1 / span 1;
-    justify-content: center;
-    align-items: center;
+    grid-area: 1 / 1 / span 1 / span 1;
+    background-image: url('/images/dragon-battle.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.3;
 }
 
 #appSec4 {
@@ -92,6 +98,11 @@ body {
     background-image: linear-gradient(to bottom, #C7CEDF, white);
     justify-content: center;
     align-items: center;
+    font-size: 1.5em;
+}
+
+#appSec4 img {
+    width: 50%;
 }
 
 .card {
@@ -107,71 +118,5 @@ body {
 }
 
 @media (max-width: 900px) {
-    body {
-        width: 100vw;
-    }
-
-    #appSec1 {
-        height: 70vh;
-    }
-
-    #left-sec1 {
-        display: none;
-    }
-
-    #right-sec1 {
-        justify-content: center;
-        align-items: center;
-        grid-area: 1 / 1 / span 1 / span 2;
-    }
-
-    #right-sec1 img {
-        width: 100%;
-    }
-
-    #appSec2 {
-        height: 130vh;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-    }
-
-    #left-sec2 {
-        grid-template-rows: repeat(4, 1fr);
-    }
-
-    #left-sec2-top {
-        font-size: 1.3em;
-        grid-area: 1 / 1 / span 1 / span 1;
-        padding: 0 5% 0 5%;
-    }
-
-    #left-sec2-bottom {
-        display: flex;
-        flex-wrap: wrap;
-        grid-area: 2 / 1 / span 3 / span 1;
-    }
-    .card {
-        height: 13rem;
-    }
-
-    .card img {
-        height: 60%;
-    }
-
-    .card-text {
-        font-size: 0.7em;
-    }
-
-    #appSec3 {
-        height: 70vh;
-    }
-
-    #appSec4 {
-        height: 50vh;
-    }
-
-    #sign-up-button {
-        width: 30vw;
-    }
+    
 }
