--- a/public/stylesheets/home-main.css
+++ b/public/stylesheets/home-main.css
@@ -1,122 +1,32 @@
 body {
-    font-family: 'Courgette', cursive;
-    width: 100vw;
-}
-
-.main-font {
-    color: black;
+    box-sizing: border-box;
     font-family: 'Courgette', cursive;
 }
 
-#appSec1 {
+#title-sec {
     display: grid;
     height: 100vh;
-    grid-template-rows: 100%;
-    grid-template-columns: 50% 50%;
-    background-image: url('../images/title-bg.jpg');
-    background-repeat: no-repeat;
+    background-image: url('/images/title-bg.jpg');
+    background-position-y: center;
     background-size: cover;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-rows: 10% 80% 10%;
 }
 
-#left-sec1 {
-    display: flex;
-    grid-area: 1 / 1 / span 1 / span 1;
-    justify-content: center;
-    align-items: center;
-}
-
-#right-sec1 {
-    display: flex;
-    flex-direction: column;
-    grid-area: 1 / 2 / span 1 / span 1;
-    justify-content: center;
-    padding: 0 3vw 0 3vw;
-}
-
-#appSec2 {
+#title-sec-img {
     display: grid;
-    height: 100vh;
-    grid-template-rows: 100%;
-    grid-template-columns: 100%;
-    background-image: url('../images/world-map-mod.jpg');
-    background-size: contain;
-    background-position: center;
-}
-
-#left-sec2 {
-    display: grid;
-    grid-template-rows: 30% 50% 20%;
-    grid-template-columns: 100%;
-}
-
-#left-sec2-top {
-    display: flex;
-    flex-direction: column;
-    grid-area: 1 / 1 / span 1 / span 1;
-    justify-content: center;
-    font-size: 2em;
-}
-
-#left-sec2-bottom {
-    display: flex;
-    grid-area: 2 / 1 / span 1 / span 1;
-}
-
-#appSec3 {
-    display: grid;
-    height: 100vh;
-    grid-template-columns: 100%;
-    grid-template-rows: 100%;
-    background-image: linear-gradient(to bottom, #F7EBC3, #C6CDDE);
-}
-
-#left-sec3 {
-    display: flex;
-    flex-direction: column;
-    grid-area: 1 / 1 / span 1 / span 1;
-    justify-content: center;
-    align-items: center;
-    font-size: 2em;
-    padding: 0 5vw 0 5vw;
-}
-
-#right-sec3 {
-    grid-area: 1 / 1 / span 1 / span 1;
-    background-image: url('/images/dragon-battle.jpg');
+    grid-area: 2 / 2 / span 1 / span 1;
+    opacity: 0.4;
+    background-image: url('/images/title-img.jpg');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.3;
 }
 
-#appSec4 {
+#title-sec-text {
+    display: grid;
+    grid-area: 2 / 2 / span 1 / span 1;
     display: flex;
-    flex-direction: column;
-    height: 100vh;
-    grid-template-columns: 100%;
-    grid-template-rows: 100%;
-    background-image: linear-gradient(to bottom, #C7CEDF, white);
-    justify-content: center;
     align-items: center;
-    font-size: 1.5em;
-}
-
-#appSec4 img {
-    width: 50%;
-}
-
-.card {
-    border: 1px solid black;
-}
-
-#sign-up-button {
-        width: 10vw;
-    }
-
-.hide-me {
-    color: blue;
-}
-
-@media (max-width: 900px) {
-    
+    justify-content: center;
+    z-index: 2;
 }
