--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -3,79 +3,22 @@
 
 <% include ../partials/head %>
 <link rel="stylesheet" href="/stylesheets/home-main.css">
-<link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
 
 <body>
     <% include ../partials/nav %>
-
-    <div id="appSec1" class="main-font">
-        <div id="left-sec1">
-            <img src="/images/title-img.jpg" class="img-fluid rounded-circle">
-        </div>
-        <div id="right-sec1">
-            <img src="/images/logo-text.png">
-        </div>
-    </div>
-
-    <div id="appSec3">
-        <div id="left-sec3">
-            <p class="main-font text-center pt-5 pb-5">Team up with other Heros to do battle with powerful creatures, enchanted beats, evil scoundrels, and ancient beings.</p>
-            
-            <p class="main-font text-center pt-5 pb-5">Discover the lore of Swiftfell Village and the fabled Hero's Academy that lies within.</p>
-            
-            <p class="main-font text-center pt-5 pb-5">Rise up and fulfil your destiny as a protect of the ancient Aeon Crystal, whose mystic energy protects mankind from the forces of darkness.</p>
-        </div>
-        <div id="right-sec3">
-            <!-- Intentionally blank -->
-        </div>
-    </div>
-
-    <div id="appSec2" class="main-font">
-        <div id="left-sec2">
-            <div id="left-sec2-top">
-                <p class="text-center">Explore a vast world on your quest to recover the Aeon Crystal, a powerful
-                    artifact which was guarded by the Hero's of Swiftfell for generations.</p>
+    
+    <div id="app">
+        <div id="title-sec">
+            <div id="title-sec-img">
+                
             </div>
-            <div id="left-sec2-bottom">
-                <div class="col" align="center">
-                    <div class="card" style="width: 15rem;">
-                        <img src="/images/forest1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body" height="85%">
-                            <p class="card-text text-center">Brave your way through deep, lush forests. Legends tell of
-                                mytical creates inhabiting these parts</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col" align="center">
-                    <div class="card" style="width: 15rem;">
-                        <img src="/images/mountians.jpg" height="42%" class="card-img-top" alt="...">
-                        <div class="card-body" height="85%">
-                            <p class="card-text">Test your courage as you scale towering mountains... watch your step!
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col" align="center">
-                    <div class="card" style="width: 15rem;">
-                        <img src="/images/desert1.jpg" height="42%" class="card-img-top" alt="...">
-                        <div class="card-body" height="85%">
-                            <p class="card-text">Explore vast deserts. Move quickly, lest you become a victim to the
-                                sands.</p>
-                        </div>
-                    </div>
-                </div>
-
+            <div id="title-sec-text">
+                <img src="/images/logo-text.png">
             </div>
         </div>
     </div>
 
-    <div id="appSec4" class="main-font">
-        <img src="/images/hero-sec4.jpg" class="rounded-pill">
-        <br>
-        <p class="text-center">Sign up for a FREE account today and start your own adventure in Tales from Swiftfell</p>
-        <a id="sign-up-button" href="/user/signup" class="btn btn-primary">Sign Up</a>
-    </div>
+
+    
 </body>
 </html>
