--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -16,6 +16,33 @@
                 <img src="/images/logo-text.png">
             </div>
         </div>
+
+        <div id="dragon-battle-sec">
+            <div id="dragon-sec-img">
+                <!-- intentionally blank -->
+            </div>
+            <div id="dragon-battle-text">
+
+            </div>
+        </div>
+
+        <div id="card-sec">
+            <div id="card-sec-img">
+                <!-- Intentionally blank -->
+            </div>
+            <div id="card-sec-text">
+
+            </div>
+        </div>
+
+        <div id="signup-sec">
+            <div id="signup-sec-img">
+                <!-- Intentionally blank -->
+            </div>
+            <div id="signup-sec-text">
+
+            </div>
+        </div>
     </div>
 
 
