added content for dragon battle section of home page

--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -21,8 +21,8 @@
             <div id="dragon-sec-img">
                 <!-- intentionally blank -->
             </div>
-            <div id="dragon-battle-text">
-
+            <div id="dragon-sec-text">
+                <p>Team up with other Heroes to slay monsters, solve mysteries, and unlock secrets untold throughout the realm of Sundirra.</p>
             </div>
         </div>
 
