--- a/public/stylesheets/home-main.css
+++ b/public/stylesheets/home-main.css
@@ -23,9 +23,8 @@ body {
 }
 
 #title-sec-text {
-    display: grid;
     grid-area: 2 / 2 / span 1 / span 1;
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
     z-index: 2;
@@ -38,12 +37,23 @@ body {
     grid-template-rows: 1fr;
 }
 
-#dragon-battle-sec {
+#dragon-sec-img {
     grid-area: 1 / 1 / span 1 / span 1;
     background-image: url('/images/dragon-battle.jpg');
     background-position-y: center;
     background-size: cover;
     opacity: 0.4;
+}
+
+#dragon-sec-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-area: 1 / 1 / span 1 / span 1;
+    font-size: 1.5em;
+    padding: 0 5vw 0 5vw;
+    z-index: 2;
 }
 
 #card-sec {
