--- a/public/stylesheets/home-main.css
+++ b/public/stylesheets/home-main.css
@@ -84,3 +84,33 @@ body {
     background-size: cover;
     opacity: 0.4;
 }
+
+#signup-sec-field {
+    grid-area: 1 / 1 / span 1 / span 1;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-self: center;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    height: 35vh;
+    width: 60vw;
+    background-color: tan;
+    opacity: 0.4;
+    border-radius: 10px;
+}
+
+#signup-sec-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    grid-area: 1 / 1 / span 1 / span 1;
+    font-size: 1.5em;
+}
+
+#signup-sec-text .btn {
+    width: 20%;
+}
