--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -39,8 +39,13 @@
             <div id="signup-sec-img">
                 <!-- Intentionally blank -->
             </div>
+            <div id="signup-sec-field">
+                
+            </div>
             <div id="signup-sec-text">
-
+                <p>Sign up for a FREE account today to embark on your journey!</p>
+                <br>
+                <a class="button btn btn-lg btn-primary" href="/user/signup">Sign Up</a>
             </div>
         </div>
     </div>
