adjusted color scheme in signup portion of home page

--- a/public/stylesheets/home-main.css
+++ b/public/stylesheets/home-main.css
@@ -96,7 +96,7 @@ body {
     z-index: 2;
     height: 35vh;
     width: 60vw;
-    background-color: tan;
+    background-color: #ADAFAC;
     opacity: 0.4;
     border-radius: 10px;
 }
