minor layout adjustments on instrutions page to better apply to various mobile devices view parameters

--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -22,7 +22,11 @@
                 <!-- intentionally blank -->
             </div>
             <div id="dragon-sec-text">
-                <p>Team up with other Heroes to slay monsters, solve mysteries, and unlock secrets untold throughout the realm of Sundirra.</p>
+                <p class="pb-5">An ancient and mysterious evil arises, forcing the Heroes of Swiftfell to once again defend the realm of Sundirra...</p>
+
+                <p class="pt-5 pb-5">... the Aeon Crystal, an etherial relic beset on the side of light, has fallen into darkness...</p>
+
+                <p class="pt-5">... a world now engulfed in despair cries out for a savior... <i>will you answer?</i></p>
             </div>
         </div>
 
