fixed typos on instruction page

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -23,9 +23,9 @@
                 <br>
                 <p>An unassuming, humble farming town, Swiftfell Village lies nestled among the southern foothills of the Sundirra Realm. Most who reside within the walls of Swiftfell spend their day cultivating the land and selling their crops to merchant caravans passing through towards the capital. At first glance, the quaint hamlet appears as unremarkable as one would assume. However, Swiftfell has been home of the fabled Hero's Academy for hundreds of years. Here, would-be champions of peace are separated from those simply filled with delusions of grandeur.</p>
                 <br>
-                <p>The establishment of the Hero's Academy in such a unremarkable location is no happenstance. Swiftfell is also home to the Aeon Crystal. A mysterious element, whose origin remain unclear to this day, emits an ethereal energy, seeming to repel creatures consumed by dark energy. For generations, the Hero's of Swiftfell have sworn a sacred oath to protect the Aeon Crystal for the good of mankind.</p>
+                <p>The establishment of the Hero's Academy in such a unremarkable location is no happenstance. Swiftfell is also home to the Aeon Crystal. A mysterious element, whose origin remains unclear to this day, emits an ethereal energy, seeming to repel creatures consumed by dark energy. For generations, the Heroes of Swiftfell have sworn a sacred oath to protect the Aeon Crystal for the good of mankind.</p>
                 <br>
-                <p>As the world grows larger, so have the forces of evil. As a result, Swiftfell Heroes often find themselves sought after by neighboring town governance, and at times by order of the High Crown, to aid is dispelling troops of monsters that plague the realm. This has lead those who seek fortune to apply for admittance into the Hero's Academy. Growing concern over the traditions of the past being forgotten, rigorous standards must be met in order to graduate from the Academy.</p>
+                <p>As the world grows larger, so have the forces of evil. As a result, Swiftfell Heroes often find themselves sought after by neighboring town governance, and at times by order of the High Crown, to aid in dispelling troops of monsters that plague the realm. This has lead those who seek fortune to apply for admittance into the Hero's Academy. Growing concerns of the traditions of the past being forgotten has lead to rigorous standards that must be met in order to graduate from the Academy.</p>
             </div>
             <div id="swiftfell-lore-right">
                 <!-- Intentionally blank for background image -->
@@ -56,7 +56,7 @@
             <div id="combat-basics-left">
                 <h1 class="mt-5 text-shadowing"><u>Combat Basics</u></h1>
                 <br>
-                <p><b>Turn-Based-Combat: </b>TFS utilizes a turn-based combat system. At the start of a combat turn, you select an action for each of your party members. Once all selections have been made, an agility stat calculation is made to determine the order of actions carried out.</p>
+                <p><b>Turn-Based Combat: </b>TFS utilizes a turn-based combat system. At the start of a combat turn, you select an action for each of your party members. Once all selections have been made, an agility stat calculation is made to determine the order of actions carried out.</p>
                 <br>
                 <p><b>Attack: </b>Using your Hero's equipped weapon, attack a selected target to deal damage. Classes that have strong Attack ability are Hero and Warrior.</p>
                 <br>
@@ -66,9 +66,9 @@
                 <br>
                 <p><b>Special: </b>Every combat action your Hero takes earns him/her Technique Points. Special moves cost various Technique Points and, like spells, can have varying effects depending on the Hero's class.</p>
                 <br>
-                <p><b>Item: </b>Use an item from your inventory in combat. An item may restore a Hero's Hit Points, Magic Points, cure status aliments, or some have other effect.</p>
+                <p><b>Item: </b>Use an item from your inventory in combat. An item may restore a Hero's Hit Points or Magic Points, cure status aliments, or have some other effect.</p>
                 <br>
-                <p><b>Escape: </b>Allows your party to flee battle. This is best to use if your Hero's are running low on or if an enemy is too strong.</p>
+                <p><b>Escape: </b>Allows your party to flee battle. This is best to use if your Heroes are running low on HP or if an enemy is too strong.</p>
             </div>
             <div id="combat-basics-right">
                 <!-- Intentionally left blank for background image -->
@@ -99,7 +99,7 @@
                     <img class="align-self-start mr-3" src="/images/sheryl-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0 char-name"><b>Sheryl</b></h3>
-                        <p>Head-strong, courageous, and quick to anger, Sheryl, too, is in her final year at the Hero's Academy. A roaming band of monsters killed her parents at a young age. She vowed that no one else should have to endure the pain she did, prompting Sheryl to seek training under famed Hero, Master. While not adapt at spell casting, Sheryl's raw power and battle-rage techniques more than make up for her lack of affinity with the spiritual realm.</p>
+                        <p>Head-strong, courageous, and quick to anger, Sheryl, too, is in her final year at the Hero's Academy. A roaming band of monsters killed her parents at a young age. She vowed that no one else should have to endure the pain she did, prompting Sheryl to seek training under famed Hero, Master. While not adept at spell casting, Sheryl's raw power and battle-rage techniques more than make up for her lack of affinity with the spiritual realm.</p>
                         <ul>
                             <li>Class: Warrior</li>
                             <li>Weapon Type: Broad Swords</li>
@@ -115,7 +115,7 @@
                     <img class="align-self-start mr-3" src="/images/jager-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0 char-name"><b>Jager</b></h3>
-                        <p>Reserved, driven, and stoic, Jager serves as the head Monk at the Marfia Monastery. Plauged by a long-standing feeling of disconnect with other people, Jager moved to Marfia one year ago after failing his Hero's Exam. He was understandably devastated after his short comings, but has always had a connection to nature and its creatures, which he finds comfort when feeling down.</p>
+                        <p>Reserved, driven, and stoic, Jager serves as the head Monk at the Marfia Monastery. Plagued by a long-standing feelings of disconnection with others, Jager moved to Marfia one year ago after failing his Hero's Exam. He was understandably devastated with his shortcomings, but has always had a connection to nature and its creatures, in which he finds comfort when feeling down.</p>
                         <ul>
                             <li>Class: Priest</li>
                             <li>Weapon Type: Crossbows</li>
@@ -130,7 +130,7 @@
                     <img class="align-self-start mr-3" src="/images/gale-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0 char-name"><b>Gale</b></h3>
-                        <p>Cheerful, helpful, and a bit too naive for her own good, Gale lives at the Marfia Monastery with her twin brother, Jager. Like her brother, Gale failed her Hero's Exam one year ago and decided to move on with her life beyond training to become   Hero. She now utilizes her skills in the healing arts, which were cultivated at the Hero's Academy, to aid the people of her new home.</p>
+                        <p>Cheerful, helpful, and a bit too naive for her own good, Gale lives at the Marfia Monastery with her twin brother, Jager. Like her brother, Gale failed her Hero's Exam one year ago and decided to move on with her life beyond training to become a   Hero. She now utilizes her skills in the healing arts, which were cultivated at the Hero's Academy, to aid the people of her new home.</p>
                         <ul>
                             <li>Class: Mage</li>
                             <li>Weapon Type: Canes</li>
@@ -145,7 +145,7 @@
                     <img class="align-self-start mr-3" src="/images/janna-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0 char-name"><b>Janna</b></h3>
-                        <p>Caring, supportive, and quick-witted, Janna has been raising her children Brindle and Megan on her own since the passing of her late husband, Agin. In the quite moments late into the night, she'll often times feel the pains of sadness at her loss, but they quickly pass as she spends her time perfecting the next best  recipe. At times, she wishes Brindle would find a different path than that of Hero training, but she is too proud of him to pay it any mind.</p>
+                        <p>Caring, supportive, and quick-witted, Janna has been raising her children Brindle and Megan on her own since the passing of her late husband, Agin. In the quiet moments late into the night, she'll often feel the pains of sadness at her loss, but they quickly pass as she spends her time perfecting the next best recipe. At times, she wishes Brindle would find a different path than that of Hero training, but she is too proud of him to pay it any mind.</p>
                         <ul>
                             <li>Occupation: Homemaker</li>
                             <li>Hobbies: Knitting and gardening</li>
@@ -160,7 +160,7 @@
                     <img class="align-self-start mr-3" src="/images/megan-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0 char-name"><b>Megan</b></h3>
-                        <p>Bright-eyed, pleasant, and good-hearted, Megan plays the typically "little sister" to Brindle. Always wanting to tag along, but never quite big enough, Megan supports the students at the Hero's Academy with baked treats made in tandem with Janna. Her love for animals leads her to care for sick and injured live stock and woodland creates found in, and around, Swiftfell Village.</p>
+                        <p>Bright-eyed, pleasant, and good-hearted, Megan plays the typically "little sister" to Brindle. Always wanting to tag along, but never quite big enough, Megan supports the students at the Hero's Academy with baked treats made in tandem with Janna. Her love for animals leads her to care for sick and injured livestock and woodland creatures found in, and around, Swiftfell Village.</p>
                         <ul>
                             <li>Occupation: None</li>
                             <li>Hobbies: Aiding injured farm animals and pets</li>
@@ -179,8 +179,8 @@
                         <p>Battle-hardened, salty, and wise, Master resides as the head instructor at the Hero's Academy in Swiftfell Village. Master has carried the title of Hero for many years, slaying countless monsters and upholding the sacred oath of protecting the Aeon Crystal. Only spoken in whispered rumors, Master is said to blame himself for Agin's death, resulting in his resignation, and subsequent appointment, at the Hero Academy.</p>
                         <ul>
                             <li>Occupation: Head Instructor at the Swiftfell Hero's Academy</li>
-                            <li>Hobbies: Maintaining the documentation of the history of Swiftfell and local historian</li>
-                            <li>Noted For: Trained along side Agin at the Hero's Academy</li>
+                            <li>Hobbies: Maintaining the documentation of the history of Swiftfell as local historian</li>
+                            <li>Noted For: Trained alongside Agin at the Hero's Academy</li>
                             <li>"Amateurs train until they get it right. Heroes train until they can't get it wrong."</li>
                         </ul>
                     </div>
