--- a/public/stylesheets/instructions.css
+++ b/public/stylesheets/instructions.css
@@ -170,6 +170,7 @@ body {
 #main-characters-center4 {
     display: flex;
     flex-direction: column;
+    height: 100vh;
     grid-area: 4 / 1 / span 1 / span 3;
     align-items: center;
     background-image: url('/images/basic-bg2.png');
