--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -24,7 +24,7 @@
             <div id="dragon-sec-text">
                 <p class="pb-5">An ancient and mysterious evil arises, forcing the Heroes of Swiftfell to once again defend the realm of Sundirra...</p>
 
-                <p class="pt-5 pb-5">... the Aeon Crystal, an etherial relic beset on the side of light, has fallen into darkness...</p>
+                <p class="pt-5 pb-5">... the Aeon Crystal, an ethereal relic beset on the side of light, has fallen into darkness...</p>
 
                 <p class="pt-5">... a world now engulfed in despair cries out for a savior... <i>will you answer?</i></p>
             </div>
@@ -35,7 +35,42 @@
                 <!-- Intentionally blank -->
             </div>
             <div id="card-sec-text">
-
+                <div id="card-sec-text-left">
+                    <!-- Card 1 -->
+                    <div class="tfs-card">
+                        <div class="tfs-card-top">
+                            <img src="/images/forest1.jpg" style="width: 100%;">
+                        </div>
+                        <div class="tfs-card-bottom">
+                            <p class="px-2 pt-2">Forest Text</p>
+                        </div>
+                    </div>
+                    <!-- End card 1 -->
+                </div>
+                <div id="card-sec-text-middle">
+                    <!-- Card 2 -->
+                    <div class="tfs-card">
+                        <div class="tfs-card-top">
+                            <img src="/images/desert1.jpg" style="width: 100%;">
+                        </div>
+                        <div class="tfs-card-bottom">
+                            <p class="px-2 pt-2">Desert Text</p>
+                        </div>
+                    </div>
+                    <!-- End card 2 -->
+                </div>
+                <div id="card-sec-text-right">
+                    <!-- Card 3 -->
+                    <div class="tfs-card">
+                        <div class="tfs-card-top">
+                            <img src="/images/mountians.jpg" style="width: 100%;">
+                        </div>
+                        <div class="tfs-card-bottom">
+                            <p class="px-2 pt-2">Mountains text</p>
+                        </div>
+                    </div>
+                    <!-- End card 3 -->
+                </div>
             </div>
         </div>
 
