--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -42,7 +42,7 @@
                             <img src="/images/forest1.jpg" style="width: 100%;">
                         </div>
                         <div class="tfs-card-bottom">
-                            <p class="px-2 pt-2">Forest Text</p>
+                            <p class="px-2">Explore enchanted forests that serve as home to an array of mythical creatures, thick groves, and dangerous beasts.</p>
                         </div>
                     </div>
                     <!-- End card 1 -->
@@ -54,7 +54,7 @@
                             <img src="/images/desert1.jpg" style="width: 100%;">
                         </div>
                         <div class="tfs-card-bottom">
-                            <p class="px-2 pt-2">Desert Text</p>
+                            <p class="px-2">Summon your courage to cross vast and expansive deserts where, rumor has it, a nomadic tribe obsessed with ethereal magic roams the dunes.</p>
                         </div>
                     </div>
                     <!-- End card 2 -->
@@ -66,7 +66,7 @@
                             <img src="/images/mountians.jpg" style="width: 100%;">
                         </div>
                         <div class="tfs-card-bottom">
-                            <p class="px-2 pt-2">Mountains text</p>
+                            <p class="px-2">Scale treacherous mountainsides as you discover deep caverns and unlock intriguing puzzles which guard fabled treasures left behind by an extinct race of mine-dwellers.</p>
                         </div>
                     </div>
                     <!-- End card 3 -->
