--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -66,7 +66,7 @@
                             <img src="/images/mountians.jpg" style="width: 100%;">
                         </div>
                         <div class="tfs-card-bottom">
-                            <p class="px-2">Scale treacherous mountainsides as you discover deep caverns and unlock intriguing puzzles which guard fabled treasures left behind by an extinct race of mine-dwellers.</p>
+                            <p class="px-2">Scale treacherous mountainsides as you discover deep caverns and unlock intriguing puzzles, which guard fabled treasures left behind by an extinct race of mine-dwellers.</p>
                         </div>
                     </div>
                     <!-- End card 3 -->
