--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -10,7 +10,7 @@
     <div id="app">
         <div id="title-sec">
             <div id="title-sec-img">
-                
+                <!-- Intentionally blank -->
             </div>
             <div id="title-sec-text">
                 <img src="/images/logo-text.png">
