--- a/public/stylesheets/home-main.css
+++ b/public/stylesheets/home-main.css
@@ -216,3 +216,22 @@ body {
         width: 40vw;
     }
 }
+
+@media (max-width: 900px) and (orientation: landscape) {
+    #dragon-battle-sec {
+        height: 120vh;
+    }
+
+    #card-sec {
+        height: 205vh;
+    }
+
+    .tfs-card {
+        width: 35vw;
+        height: 65vh;
+    }
+
+    .tfs-card-bottom {
+        font-size: 0.8em;
+    }
+}
