--- a/public/stylesheets/signin.css
+++ b/public/stylesheets/signin.css
@@ -1,57 +1,40 @@
-html,
 body {
-  height: 100%;
   font-family: 'Courgette', cursive;
+  background-image: radial-gradient(white, tan);
 }
 
-body {
-  display: -ms-flexbox;
+#app {
+  display: grid;
+  height: 95vh;
+  grid-template-rows: 10% 80% 10%;
+  grid-template-columns: 20% 60% 20%;
+}
+
+#sign-in-area {
   display: flex;
-  flex-direction: column;
-  -ms-flex-align: center;
+  grid-area: 2 / 2 / span 1 / span 1;
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
+  justify-content: center;
 }
 
-.form-signin {
-  width: 100%;
-  max-width: 330px;
-  padding: 15px;
-  margin: auto;
-}
-.form-signin .checkbox {
-  font-weight: 400;
-}
-.form-signin .form-control {
-  position: relative;
-  box-sizing: border-box;
-  height: auto;
-  padding: 10px;
-  font-size: 16px;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+#sign-in-area img {
+  /* width: 100%; */
+  height: 130%;
+  z-index: -1;
 }
 
-@media (max-width: 700px) {
-  img {
-    width: 100%;
-  }
+#form-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-area: 2 / 2 / span 1 / span 1;
+}
 
-  .form-resize {
-    width: 85%;
-    margin: auto;
-  }
+.form-resize {
+  width: 20vw;
+}
+
+.btn-primary {
+  background-color: seagreen;
+  border: 1px solid black;
 }
