--- a/public/stylesheets/signin.css
+++ b/public/stylesheets/signin.css
@@ -6,6 +6,7 @@ body {
 #app {
   display: grid;
   height: 95vh;
+  width: 100vw;
   grid-template-rows: 10% 80% 10%;
   grid-template-columns: 20% 60% 20%;
 }
@@ -18,7 +19,6 @@ body {
 }
 
 #sign-in-area img {
-  /* width: 100%; */
   height: 130%;
   z-index: -1;
 }
@@ -37,4 +37,39 @@ body {
 .btn-primary {
   background-color: seagreen;
   border: 1px solid black;
+}
+
+@media (max-width: 900px) {
+  #app {
+    height: 100vh;
+    grid-template-columns: 100%;
+    grid-template-rows: 100%;
+  }
+
+  #form-area {
+    grid-area: 1 / 1 / span 1 / span 1;
+  }
+
+  #sign-in-area {
+    grid-area: 1 / 1 / span 1 / span 1;
+  }
+
+  #sign-in-area img {
+    height: 100%;
+    width: 100%;
+  }
+
+  .form-resize {
+    width: 55vw;
+  }
+
+  #form-area {
+    padding-right: 5vw;
+  }
+}
+
+@media (max-width: 900px) and (orientation: landscape) {
+  #app {
+    height: 170vh;
+  }
 }
