--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -3,45 +3,36 @@
 
 <% include ../partials/head %>
 
-<body class=" text-center" style="background-image: radial-gradient(white, rgb(226, 186, 134));">
+<body>
     <% include ../partials/nav %>
-
-    <img src="/images/scroll.png" style="position: absolute; justify-self: center; align-self: center; z-index: -1;" height="100%">
-
-    <% for (let err of loginMessage) { %>
-
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <%= err%>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <% } %>
-
-
-    <form class="form-signin" method="POST" action="/user/signin">
-
-        <% if (success.length > 1) { %>
-        
-        <div class="alert alert-primary alert-dismissible fade show" role="alert">
-            <%= success%>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+    <div id="app">
+        <div id="sign-in-area">
+            <img src="/images/scroll.png">
         </div>
-        <% } %>
+        <div id="form-area">
+            <form class="form-signin" method="POST" action="/user/signin">
 
-        <!-- <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1> -->
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="text" id="inputEmail" class="form-control form-resize" placeholder="Email address" name="email">
-        <br>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="text" id="inputPassword" class="form-control form-resize" placeholder="Password" name="password">
-        <br>
-        <button class="btn btn-lg btn-primary btn-block form-resize" type="submit" style="font-family: fantasy;">Sign In</button>
-        <br>
-        <a style="color: blue; font-family: fantasy;" href="/user/passwordrecovery"><b>Click here to recover password</b></a>
-    </form>
+            <% for (let err of loginMessage) { %>
+            
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <%= err%>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <% } %>
+
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="text" id="inputEmail" class="form-control form-resize" placeholder="Email address" name="email">
+            <br>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="text" id="inputPassword" class="form-control form-resize" placeholder="Password" name="password">
+            <br>
+            <button class="btn btn-lg btn-primary btn-block form-resize" type="submit" style="font-family: fantasy;">Sign In</button>
+            <br>
+            <center><a style="color: blue;" href="/user/passwordrecovery"><b>Click here to recover password</b></a></center>
+            </form>
+        </div>
     
     </a>
 
