--- a/public/stylesheets/password-recovery.css
+++ b/public/stylesheets/password-recovery.css
@@ -31,7 +31,7 @@ body {
     border: 1px solid black;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 900px) {
     #form-area {
         width: 65vw;
     }
@@ -44,5 +44,16 @@ body {
     .alert-resize {
         width: 90%;
         font-size: 0.8em;
+    }
+}
+
+@media (max-width: 900px) and (orientation: landscape) {
+    .main {
+        background-position: center;
+        background-size: cover;
+    }
+
+    #form-area {
+        height: 50vh;
     }
 }
