updated all input elements that are designated for passwords to by type=password

--- a/views/user/edit-profile.ejs
+++ b/views/user/edit-profile.ejs
@@ -9,15 +9,15 @@
 
     <br />
     <label for="inputPassword" class="sr-only">Old Password</label>
-    <input type="text" id="inputPassword" class="form-control" placeholder="Old Password" name="password">
+    <input type="password" id="inputPassword" class="form-control" placeholder="Old Password" name="password">
 
     <br />
     <label for="inputPassword" class="sr-only">New Password</label>
-    <input type="text" id="inputPassword2" class="form-control" placeholder="New Password" name="password2">
+    <input type="password" id="inputPassword2" class="form-control" placeholder="New Password" name="password2">
 
     <br />
     <label for="inputPassword" class="sr-only">Confirm Password</label>
-    <input type="text" id="inputPassword3" class="form-control" placeholder="Confirm Password" name="password3">
+    <input type="password" id="inputPassword3" class="form-control" placeholder="Confirm Password" name="password3">
 
     <br />
     <button class="btn btn-lg btn-primary btn-block" type="submit">Update Profile</button>
