--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -28,9 +28,9 @@
                         <input type="text" id="inputEmail" class="form-control form-resize" placeholder="Email address" name="email">
                         <br>
                         <label for="inputPassword" class="sr-only">Password</label>
-                        <input type="text" id="inputPassword" class="form-control form-resize" placeholder="Password" name="password">
+                        <input type="password" id="inputPassword" class="form-control form-resize" placeholder="Password" name="password">
                         <br>
-                        <input type="text" id="inputPassword2" class="form-control form-resize" placeholder="Confirm Password" name="password2">
+                        <input type="password" id="inputPassword2" class="form-control form-resize" placeholder="Confirm Password" name="password2">
                         <br>
                         <button class="btn btn-lg btn-primary btn-block form-resize" type="submit" style="font-family: fantasy;">Sign up</button>
             </form>
