--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -26,7 +26,7 @@
             <input type="text" id="inputEmail" class="form-control form-resize" placeholder="Email address" name="email">
             <br>
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="text" id="inputPassword" class="form-control form-resize" placeholder="Password" name="password">
+            <input type="password" id="inputPassword" class="form-control form-resize" placeholder="Password" name="password">
             <br>
             <button class="btn btn-lg btn-primary btn-block form-resize" type="submit" style="font-family: fantasy;">Sign In</button>
             <br>
