--- a/public/stylesheets/signin.css
+++ b/public/stylesheets/signin.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Courgette', cursive;
-  background-image: radial-gradient(white, tan);
+  background-image: url('/images/mountains-sign.jpeg')
 }
 
 #app {
