--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,13 @@
 
 <body>
     <div id="app">
-        <div id="main-img-area">
-            <img onclick="link()" src="/images/title-img2.jpg" />
+        <div id="image-area">
+            <div id="image-area-top">
+                <img class="img-fluid" id="tfs-logo" class="img-fluid" src="/images/logo.png">
+            </div>
+            <div id="image-area-bottom">
+                <img onclick="link()" class="img-fluid" id="tfs-enter" src="/images/enter-logo.png">
+            </div>
         </div>
     </div>
 
